testdata/baselines/reference/compiler/tluaNoSwitch.errors.txt
tluaNoSwitch.tlua(13,1): error TLUA2554: Expected 2 arguments, but got 1.
tluaNoSwitch.tlua(13,12): error TLUA1005: ';' expected.
tluaNoSwitch.tlua(14,3): error TLUA1434: Unexpected keyword or identifier.
tluaNoSwitch.tlua(14,9): error TLUA1005: ';' expected.


==== tluaNoSwitch.tlua (4 errors) ====
    // tlua has no switch statement: `switch` and `case` are ordinary identifiers,
    // as in Lua.
    local switch = function(self: {}, mode: string) return mode; end;
    local case = "c";
    local t = { switch = switch, case = 2 };
    local a = t:switch("on");
    local b = t.case;
    
    // A TS switch statement no longer parses as a statement: `switch (x)` is a
    // call to whatever `switch` names, and the clause syntax behind it is a plain
    // parse error.
    declare x: 1 | 2;
    switch (x) {
    ~~~~~~
!!! error TLUA2554: Expected 2 arguments, but got 1.
!!! related TLUA6210 tluaNoSwitch.tlua:3:35: An argument for 'mode' was not provided.
               ~
!!! error TLUA1005: ';' expected.
      case 1:
      ~~~~
!!! error TLUA1434: Unexpected keyword or identifier.
            ~
!!! error TLUA1005: ';' expected.
        break;
    }
    